fix(logo-carousel): fix spacing between logos

--- a/components/logo-carousel/logo-carousel.less
+++ b/components/logo-carousel/logo-carousel.less
@@ -57,11 +57,11 @@
 	li {
 		display: flex;
 		align-items: center;
-		margin: 0 @spacing-small;
+		margin: 0 @spacing-medium;
 		list-style: none;
 
 		@media @screen-medium {
-			margin: 0 @spacing-extra-large;
+			margin: 0 @spacing-default*5;
 		}
 	}
 
